; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/regress/unittests/test_helper/extr_test_helper.c_assert_char.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/regress/unittests/test_helper/extr_test_helper.c_assert_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"CHAR\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [22 x i8] c"%12s = '%s' / 0x02%x\0A\00", align 1
@VIS_SAFE = common dso_local global i32 0, align 4
@VIS_NL = common dso_local global i32 0, align 4
@VIS_TAB = common dso_local global i32 0, align 4
@VIS_OCTAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @assert_char(i8* %0, i32 %1, i8* %2, i8* %3, i8 signext %4, i8 signext %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8, align 1
  %13 = alloca i8, align 1
  %14 = alloca i32, align 4
  %15 = alloca [8 x i8], align 1
  store i8* %0, i8** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i8 %4, i8* %12, align 1
  store i8 %5, i8* %13, align 1
  store i32 %6, i32* %14, align 4
  %16 = load i8, i8* %12, align 1
  %17 = load i8, i8* %13, align 1
  %18 = load i32, i32* %14, align 4
  %19 = call i32 @TEST_CHECK(i8 signext %16, i8 signext %17, i32 %18)
  %20 = load i8*, i8** %8, align 8
  %21 = load i32, i32* %9, align 4
  %22 = load i8*, i8** %10, align 8
  %23 = load i8*, i8** %11, align 8
  %24 = load i32, i32* %14, align 4
  %25 = call i32 @test_header(i8* %20, i32 %21, i8* %22, i8* %23, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %24)
  %26 = load i32, i32* @stderr, align 4
  %27 = load i8*, i8** %10, align 8
  %28 = getelementptr inbounds [8 x i8], [8 x i8]* %15, i64 0, i64 0
  %29 = load i8, i8* %12, align 1
  %30 = load i32, i32* @VIS_SAFE, align 4
  %31 = load i32, i32* @VIS_NL, align 4
  %32 = or i32 %30, %31
  %33 = load i32, i32* @VIS_TAB, align 4
  %34 = or i32 %32, %33
  %35 = load i32, i32* @VIS_OCTAL, align 4
  %36 = or i32 %34, %35
  %37 = call i8* @vis(i8* %28, i8 signext %29, i32 %36, i32 0)
  %38 = load i8, i8* %12, align 1
  %39 = call i32 @fprintf(i32 %26, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i8* %27, i8* %37, i8 signext %38)
  %40 = load i32, i32* @stderr, align 4
  %41 = load i8*, i8** %10, align 8
  %42 = getelementptr inbounds [8 x i8], [8 x i8]* %15, i64 0, i64 0
  %43 = load i8, i8* %13, align 1
  %44 = load i32, i32* @VIS_SAFE, align 4
  %45 = load i32, i32* @VIS_NL, align 4
  %46 = or i32 %44, %45
  %47 = load i32, i32* @VIS_TAB, align 4
  %48 = or i32 %46, %47
  %49 = load i32, i32* @VIS_OCTAL, align 4
  %50 = or i32 %48, %49
  %51 = call i8* @vis(i8* %42, i8 signext %43, i32 %50, i32 0)
  %52 = load i8, i8* %13, align 1
  %53 = call i32 @fprintf(i32 %40, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i8* %41, i8* %51, i8 signext %52)
  %54 = call i32 (...) @test_die()
  ret void
}

declare dso_local i32 @TEST_CHECK(i8 signext, i8 signext, i32) #1

declare dso_local i32 @test_header(i8*, i32, i8*, i8*, i8*, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*, i8 signext) #1

declare dso_local i8* @vis(i8*, i8 signext, i32, i32) #1

declare dso_local i32 @test_die(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
